# openCV-model

./: LICENSE  README.md
cv_py/: CMakeLists.txt  package.xml  setup.py
cv_py/script/: bar  filter_test  hsv_detect  line_detect
cv_py/src/cv_py/: __init__.py  image.py  noiseProcess.py  recognize.py  trackbar.py
